# Rust_CLI

./: Cargo.toml  DEVELOPMENT.md  FFI.md  GETTING_STARTED.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  install-rust.bat  install-rust.sh
bindings/: c_example.c  csharp_example.cs  python_example.py
src/: ffi.rs  lib.rs  main.rs  processor.rs
